changed the description

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>I am happy about learning new things, and this class is fun.</p>
+	<p>I am happy about learning new things, and this class is fun. Below is the step-by-step approach to be a good designer. </p>
 
 	<h4>Projects</h4>
 	<ol>
