changed the description TESTING

--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,10 @@
 		<li>Waiting in line</li>
 		<li>Needfinding</li>
 		<li>Prototyping</li>
+
+
+				<li>TESTING</li>
+
 		<li>...</li>
 	</ol>
 </body>
